完成quick tour前半部分

--- a/huggingface/transformers/getstart/quicktour.ipynb
+++ b/huggingface/transformers/getstart/quicktour.ipynb
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##Pipeline\n",
+    "## Pipeline\n",
     "\n",
     "pipeline()是使用预训练模型进行推理的最简单和最快的方法。你可以将pipeline()开箱即用，用于不同模式的许多任务，其中一些任务如下表所示：\n",
     "\n",
@@ -120,13 +120,132 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "如果你有一个以上的输入，把你的输入作为一个列表传给pipeline()，以返回一个字典的列表：\n",
-    "\n",
-    "    results = classifier([\"We are very happy to show you the 🤗 Transformers library.\", \"We hope you don't hate it.\"])\n",
+    "如果你有一个以上的输入，把你的输入作为一个列表传给pipeline()，以返回一个字典的列表："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "results = classifier([\"We are very happy to show you the 🤗 Transformers library.\", \"We hope you don't hate it.\"])\n",
     "    for result in results:\n",
-    "        print(f\"label: {result['label']}, with score: {round(result['score'], 4)}\")\n",
-    "    label: POSITIVE, with score: 0.9998\n",
-    "    label: NEGATIVE, with score: 0.5309"
+    "        print(f\"label: {result['label']}, with score: {round(result['score'], 4)}\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "label: POSITIVE, with score: 0.9998\n",
+    "\n",
+    "label: NEGATIVE, with score: 0.5309\n",
+    "\n",
+    "pipeline()也可以为你喜欢的任何任务在整个数据集上迭代。在这个例子中，让我们选择自动语音识别作为我们的任务："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from transformers import pipeline\n",
+    "\n",
+    "speech_recognizer = pipeline(\"automatic-speech-recognition\", model=\"facebook/wav2vec2-base-960h\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "加载一个你想迭代的音频数据集（详见《数据集快速入门》）。例如，加载MInDS-14数据集："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from datasets import load_dataset, Audio\n",
+    "\n",
+    "dataset = load_dataset(\"PolyAI/minds14\", name=\"en-US\", split=\"train\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "你需要确保数据集的采样率与facebook/wav2vec2-base-960h训练的采样率一致："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "dataset = dataset.cast_column(\"audio\", Audio(sampling_rate=speech_recognizer.feature_extractor.sampling_rate))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "调用 \"音频 \"列时，音频文件被自动加载并重新采样。从前4个样本中提取原始波形阵列，并将其作为一个列表传递给管道："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "result = speech_recognizer(dataset[:4][\"audio\"])\n",
+    "print([d[\"text\"] for d in result])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "['I WOULD LIKE TO SET UP A JOINT ACCOUNT WITH MY PARTNER HOW DO I PROCEED WITH DOING THAT', \"FONDERING HOW I'D SET UP A JOIN TO HELL T WITH MY WIFE AND WHERE THE AP MIGHT BE\", \"I I'D LIKE TOY SET UP A JOINT ACCOUNT WITH MY PARTNER I'M NOT SEEING THE OPTION TO DO IT ON THE APSO I CALLED IN TO GET SOME HELP CAN I JUST DO IT OVER THE PHONE WITH YOU AND GIVE YOU THE INFORMATION OR SHOULD I DO IT IN THE AP AN I'M MISSING SOMETHING UQUETTE HAD PREFERRED TO JUST DO IT OVER THE PHONE OF POSSIBLE THINGS\", 'HOW DO I FURN A JOINA COUT']"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "对于输入量较大的数据集（如语音或视觉），你要传递一个生成器而不是一个列表，以便在内存中加载所有的输入。更多信息请看 pipeline API reference。"
    ]
   }
  ],
