--- a/huggingface/transformers/2.turorials/3.preprocessing.ipynb
+++ b/huggingface/transformers/2.turorials/3.preprocessing.ipynb
@@ -560,6 +560,444 @@
     "\n",
     "processed_dataset[\"input_values\"][1].shape  # (100000,)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 计算机视觉\n",
+    "\n",
+    "对于计算机视觉任务，你需要一个图像处理器来为模型准备你的数据集。图像预处理--将图像转换成模型所期望的输入--包括几个步骤。这些步骤包括但不限于调整大小、归一化、色彩通道校正和将图像转换为张量。\n",
+    "\n",
+    "> 图像预处理往往是在某种形式的图像增强之后进行的。图像预处理和图像增强都是对图像数据的转换，但它们的目的不同：\n",
+    "> * 图像增强以一种有助于防止过度拟合和增加模型的稳健性的方式改变图像。你可以创造性地增加你的数据 - 调整亮度和颜色、裁剪、旋转、调整大小、缩放等。然而，要注意不要用你的扩增来改变图像的含义。\n",
+    "> * 图像预处理保证了图像与模型的预期输入格式相符。在对计算机视觉模型进行微调时，必须对图像进行预处理，与最初训练模型时完全一样。\n",
+    "> 你可以使用任何你喜欢的库来进行图像扩增。对于图像预处理，使用与该模型相关的ImageProcessor。\n",
+    "\n",
+    "加载food101数据集（参见[数据集](https://huggingface.co/docs/datasets/load_hub.html)教程，了解如何加载数据集的更多细节），看看如何用计算机视觉数据集使用图像处理器：\n",
+    "\n",
+    "> 使用数据集分割参数，只加载训练分割的小样本，因为数据集相当大!\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from datasets import load_dataset\n",
+    "\n",
+    "dataset = load_dataset(\"food101\", split=\"train[:100]\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "接下来，用数据集图像功能看一下图像："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "dataset[0][\"image\"]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![图片](https://huggingface.co/datasets/huggingface/documentation-images/resolve/main/vision-preprocess-tutorial.png)\n",
+    "\n",
+    "用AutoImageProcessor.from_pretrained()加载图像处理器："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from transformers import AutoImageProcessor\n",
+    "\n",
+    "image_processor = AutoImageProcessor.from_pretrained(\"google/vit-base-patch16-224\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "首先，让我们添加一些图像增强功能。你可以使用你喜欢的任何库，但在本教程中，我们将使用torchvision的transforms模块。如果你对使用另一个数据增强库感兴趣，可以在Albumentations或Kornia笔记本中学习如何使用。\n",
+    "\n",
+    "1. 在这里，我们使用Compose将几个变换连锁起来--RandomResizedCrop和ColorJitter。请注意，对于调整大小，我们可以从图像处理器中获得图像的尺寸要求。对于某些模型来说，需要精确的高度和宽度，对于其他模型来说，只需要定义最短边。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from torchvision.transforms import RandomResizedCrop, ColorJitter, Compose\n",
+    "\n",
+    "size = (\n",
+    "    image_processor.size[\"shortest_edge\"]\n",
+    "    if \"shortest_edge\" in image_processor.size\n",
+    "    else (image_processor.size[\"height\"], image_processor.size[\"width\"])\n",
+    ")\n",
+    "\n",
+    "_transforms = Compose([RandomResizedCrop(size), ColorJitter(brightness=0.5, hue=0.5)])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. 该模型接受 pixel_values 作为其输入。ImageProcessor可以负责对图像进行标准化处理，并生成适当的张量。创建一个函数，将图像增强和图像预处理结合起来，对一批图像进行处理，并生成pixel_values："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def transforms(examples):\n",
+    "    images = [_transforms(img.convert(\"RGB\")) for img in examples[\"image\"]]\n",
+    "    examples[\"pixel_values\"] = image_processor(images, do_resize=False, return_tensors=\"pt\")[\"pixel_values\"]\n",
+    "    return examples"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> 在上面的例子中，我们设置do_resize=False，因为我们已经在图像增强转换中调整了图像的大小，并且利用了相应的图像处理器的大小属性。如果你在图像增强过程中不调整图像的大小，可以不设置这个参数。默认情况下，ImageProcessor将处理大小的调整。\n",
+    "> 如果你希望将图像标准化作为扩增转换的一部分，请使用image_processor.image_mean和image_processor.image_std值。\n",
+    "\n",
+    "3. 然后使用Datasets set_transform来实时应用变换："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "dataset.set_transform(transforms)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. 现在当你访问图像时，你会发现图像处理器已经添加了pixel_values。你现在可以把你处理过的数据集传给模型了!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "dataset[0].keys()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "下面是应用变换后的图像的样子。图像被随机裁剪，它的颜色属性也不同。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "img = dataset[0][\"pixel_values\"]\n",
+    "plt.imshow(img.permute(1, 2, 0))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![图片](https://huggingface.co/datasets/huggingface/documentation-images/resolve/main/preprocessed_image.png)\n",
+    "\n",
+    "> 对于像物体检测、语义分割、实例分割和全景分割这样的任务，ImageProcessor提供后处理方法。这些方法将模型的原始输出转化为有意义的预测，如边界盒或分割图。\n",
+    "\n",
+    "### 填充(Pad)\n",
+    "\n",
+    "在某些情况下，例如在微调DETR时，该模型在训练时应用比例增强。这可能会导致图像在一个批次中出现不同的尺寸。你可以使用DetrImageProcessor.pad_and_create_pixel_mask()，并定义一个自定义的collate_fn，将图像批到一起。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def collate_fn(batch):\n",
+    "    pixel_values = [item[\"pixel_values\"] for item in batch]\n",
+    "    encoding = image_processor.pad_and_create_pixel_mask(pixel_values, return_tensors=\"pt\")\n",
+    "    labels = [item[\"labels\"] for item in batch]\n",
+    "    batch = {}\n",
+    "    batch[\"pixel_values\"] = encoding[\"pixel_values\"]\n",
+    "    batch[\"pixel_mask\"] = encoding[\"pixel_mask\"]\n",
+    "    batch[\"labels\"] = labels\n",
+    "    return batch"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 多式联运(Multimodal)\n",
+    "\n",
+    "对于涉及多模态输入的任务，你需要一个处理器来为模型准备你的数据集。一个处理器将两个处理对象结合在一起，如标记器和特征提取器。\n",
+    "\n",
+    "加载LJ语音数据集（参见数据集教程，了解如何加载数据集的详情），看看如何使用处理器进行自动语音识别（ASR）："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from datasets import load_dataset\n",
+    "\n",
+    "lj_speech = load_dataset(\"lj_speech\", split=\"train\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "对于ASR来说，你主要关注的是音频和文本，所以你可以删除其他栏目："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "lj_speech = lj_speech.map(remove_columns=[\"file\", \"id\", \"normalized_text\"])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "现在看一下音频和文本栏："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "lj_speech[0][\"audio\"]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "{'array': array([-7.3242188e-04, -7.6293945e-04, -6.4086914e-04, ...,\n",
+    "         7.3242188e-04,  2.1362305e-04,  6.1035156e-05], dtype=float32),\n",
+    " 'path': '/root/.cache/huggingface/datasets/downloads/extracted/917ece08c95cf0c4115e45294e3cd0dee724a1165b7fc11798369308a465bd26/LJSpeech-1.1/wavs/LJ001-0001.wav',\n",
+    " 'sampling_rate': 22050}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "lj_speech[0][\"text\"]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "'Printing, in the only sense with which we are at present concerned, differs from most if not from all the arts and crafts represented in the Exhibition'\n",
+    "```\n",
+    "\n",
+    "请记住，你应该始终对你的音频数据集的采样率进行重新采样，以匹配用于预训练模型的数据集的采样率！"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "lj_speech = lj_speech.cast_column(\"audio\", Audio(sampling_rate=16_000))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "用AutoProcessor.from_pretrained()加载一个处理器："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from transformers import AutoProcessor\n",
+    "\n",
+    "processor = AutoProcessor.from_pretrained(\"facebook/wav2vec2-base-960h\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. 创建一个函数来处理数组中包含的音频数据到input_values，并将文本标记为标签。这些都是模型的输入："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def prepare_dataset(example):\n",
+    "    audio = example[\"audio\"]\n",
+    "\n",
+    "    example.update(processor(audio=audio[\"array\"], text=example[\"text\"], sampling_rate=16000))\n",
+    "\n",
+    "    return example"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. 对一个样本应用prepare_dataset函数："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "prepare_dataset(lj_speech[0])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "处理器现在已经添加了input_values和标签，而且采样率也已经正确降频到16kHz。你现在可以把你处理过的数据集传给模型了!"
+   ]
   }
  ],
  "metadata": {
