--- a/huggingface/transformers/2.turorials/3.preprocessing.ipynb
+++ b/huggingface/transformers/2.turorials/3.preprocessing.ipynb
@@ -996,7 +996,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "处理器现在已经添加了input_values和标签，而且采样率也已经正确降频到16kHz。你现在可以把你处理过的数据集传给模型了!"
+    "处理器现在已经添加了input_values和标签，而且采样率也已经正确降频到16kHz。你现在可以把你处理过的数据集传给模型了!\n",
+    "\n",
+    "---\n",
+    "v4.30.0"
    ]
   }
  ],
